	* src/po/it.po: updated Italian translation

2003-12-06  Alex Roitman  <shura@alex.neuro.umn.edu>
	* doc/gramps-manual/C/figures/pedigree-child-cut.png: Add figure.
	* doc/gramps-manual/C/mainwin.xml: Add figure. 
	* FAQ, doc/gramps-manual/C/faq.xml: Add two questions. 
	* src/plugins/WriteFtree.py (on_help_clicked): Add function. 
	* doc/gramps.1: Update. 

2003-12-05  Alex Roitman  <shura@alex.neuro.umn.edu>
	* src/po/ru.po: Update Russian translation for 0.98.
	* doc/gramps-manual/C/getstart.xml: More "open a directory" stuff. 
	* src/gramps.glade: Add Help button to opendb dialog.
	* src/DbPrompter.py (open_help_clicked): Add function.
	* src/PedView.py: Remove references to self.presel_descendants
	(closes bug #854626).
	* src/gramps_main.py (__init__): Remove unneeded handler.

2003-12-04  Alex Roitman  <shura@alex.neuro.umn.edu>
	* doc/gramps-manual/C/getstart.xml: Remove ZODB support section. 
	* doc/gramps-manual/C/usage.xml: Remove ZODB support section.
	* TODO: Update.
	* gramps.desktop: Remove in favor of src/gramps.desktop file.
	* src/gramps_main.py: Replace stock Home with the custom string.
	* src/PeopleView.py: Replace stock Home with the custom string.

2003-12-03  Alex Roitman  <shura@alex.neuro.umn.edu>
	* src/plugins/ReadGedcom.py (parse_source): Stop TEXT messing
	up the title; add ABBR to the note field (was ignored).
	* doc/gramps-manual/C/faq.xml: Link to referenced cites.    
	* doc/gramps-manual/C/usage.xml: Document the completeness flag.
	Describe new layout of book report.
	* doc/gramps-manual/C/mainwin.xml: Document children menu markup
	in Pedigree View.
	* NEWS: Minor corrections. 

2003-12-02  Don Allingham  <dallingham@users.sourceforge.net>
	* src/PeopleView.py (PeopleView.clear_person_tabs): initialize
	the model2page map with the default list, instead of clearing it.

2003-12-02  Alex Roitman  <shura@alex.neuro.umn.edu>
	* src/gramps.desktop: Add russian strings. Set encoding line to UTF-8.