@@ -37,7 +37,7 @@
 	      <property name="label">gtk-cancel</property>
 	      <property name="use_stock">True</property>
 	      <property name="relief">GTK_RELIEF_NORMAL</property>
-	      <property name="response_id">0</property>
+	      <property name="response_id">-6</property>
 	      <signal name="clicked" handler="destroy_passed_object" object="placeEditor"/>
 	    </widget>
 	  </child>
@@ -51,7 +51,7 @@
 	      <property name="label">gtk-ok</property>
 	      <property name="use_stock">True</property>
 	      <property name="relief">GTK_RELIEF_NORMAL</property>
-	      <property name="response_id">0</property>
+	      <property name="response_id">-5</property>
 	      <signal name="clicked" handler="on_apply_clicked" object="placeEditor"/>
 	    </widget>
 	  </child>
