@@ -11,6 +11,11 @@
 	* FAQ, doc/gramps-manual/C/faq.xml: Add two questions. 
 	* src/plugins/WriteFtree.py (on_help_clicked): Add function. 
 	* doc/gramps.1: Update. 
+	* src/EditPlace.py: Pass window to LocEdit.py. Correct apply callback.
+	* src/LocEdit.py (__init__): Make dialog modal and transient 
+	for its parent; (on_help_clicked): Add function.
+	* src/dialog.glade: Correct response IDs.
+	* src/places.glade: Correct response IDs.
 
 2003-12-05  Alex Roitman  <shura@alex.neuro.umn.edu>
 	* src/po/ru.po: Update Russian translation for 0.98.
